# genome-loader

./: .gitignore  Makefile  README.md  dprint.json  example.json  genomes.json  pyproject.toml
genome_loader/: check_dependencies.py  config.py  config_test.py  handlers.py  infer.py  logger_utils.py  main.py
genome_loader/script_templates/: __init__.py  blast.py  bowtie2.py  hisat2.py  salmon.py  star.py
src/: _io.py  check_dependencies.py  download.py  main.py
