[tool.poetry]
name = "genome_loader"
version = "0.1.0"
description = ""
authors = ["illumination-k <illumination.k.27@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "genome_loader" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.1"
click = "^8.1.3"
pydantic = "^1.10.2"

[tool.poetry.scripts]
gl = "genome_loader.main:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
types-requests = "^2.28.11.4"

[tool.mypy]
namespace_packages = true

[tool.black]
line-length = 100
exclude = '''
/(
  # These would already be ignored by pants, but having them here allows for manually running Black if one so wishes.
  | \.git
  | \.mypy_cache
  | dist
  | \.pants\.d
  | virtualenvs
  # This file intentionally contains invalid syntax
  # It trips black up.
  | compilation_failure
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
